APD-968/FixedOffCenterMP02-Nicholas

--- a/components/features/Slider/default.scss
+++ b/components/features/Slider/default.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 100vw;
+  width: calc(100vw - 1rem - 1px);
   overflow: hidden;
   box-shadow: 0 2px 26px 4px rgba(0, 0, 0, .1);
 
