--- a/components/features/Special/default.scss
+++ b/components/features/Special/default.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   min-height: 300px;
-  width: 100vw;
+  width: calc(100vw - 1rem - 1px);
   overflow: hidden;
 
   .c-call-to-action {
