--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -132,14 +132,14 @@
 @mixin arc-ad-full-width {
   padding: 20px 0;
   box-shadow: 0 2px 26px 4px rgba(0, 0, 0, .1);
-  width: 100vw;
+  width: calc(100vw - 1rem - 1px);
 
   &.c-HS02 {
     padding-bottom: 40px;
   }
 
   .arcad:not(.HS02) {
-    width: 100vw;
+    width: calc(100vw - 1rem - 1px);
     max-width: 1600px;
     text-align: center;
     margin: 0 auto;
